update TC and OD
