# public/openapi/swagger.json
@@ -285,6 +285,16 @@
               }
             }
           },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CustomProblemDetails"
+                }
+              }
+            }
+          },
           "500": {
             "description": "Internal Server Error",
             "content": {
@@ -356,6 +366,16 @@
               }
             }
           },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CustomProblemDetails"
+                }
+              }
+            }
+          },
           "500": {
             "description": "Internal Server Error",
             "content": {
@@ -376,16 +396,16 @@
         ],
         "summary": "Retrieves the organizationdetail by id",
         "operationId": "GetOrganizationDetailsById",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "string"
-              }
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
             }
-          },
-          "required": true
-        },
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -393,16 +413,6 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ApiResult"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/problem+json": {
-                "schema": {
-                  "$ref": "#/components/schemas/CustomProblemDetails"
                 }
               }
             }
@@ -419,6 +429,16 @@
           },
           "403": {
             "description": "Forbidden",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CustomProblemDetails"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
             "content": {
               "application/problem+json": {
                 "schema": {
@@ -445,11 +465,21 @@
         ],
         "summary": "Update the organization detail by id",
         "operationId": "UpdateOrganizationDetailsById",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "type": "string"
+                "$ref": "#/components/schemas/OrganizationDetail"
               }
             }
           },
@@ -488,6 +518,16 @@
           },
           "403": {
             "description": "Forbidden",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CustomProblemDetails"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
             "content": {
               "application/problem+json": {
                 "schema": {
@@ -514,16 +554,16 @@
         ],
         "summary": "Delete or Deactivate organization detail by id",
         "operationId": "DeleteOrganizationDetailsById",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "string"
-              }
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
             }
-          },
-          "required": true
-        },
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -531,16 +571,6 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ApiResult"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/problem+json": {
-                "schema": {
-                  "$ref": "#/components/schemas/CustomProblemDetails"
                 }
               }
             }
@@ -557,6 +587,16 @@
           },
           "403": {
             "description": "Forbidden",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CustomProblemDetails"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
             "content": {
               "application/problem+json": {
                 "schema": {
@@ -840,6 +880,16 @@
           },
           "403": {
             "description": "Forbidden",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CustomProblemDetails"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
             "content": {
               "application/problem+json": {
                 "schema": {
@@ -3533,9 +3583,7 @@
       },
       "OrganizationDetail": {
         "required": [
-          "abn",
           "dateLastUpdated",
-          "id",
           "industryGroupID",
           "nameOfOrganisation",
           "organisationCode",
@@ -3544,8 +3592,8 @@
         "type": "object",
         "properties": {
           "id": {
-            "minLength": 1,
-            "type": "string"
+            "type": "string",
+            "nullable": true
           },
           "organisationCode": {
             "minLength": 1,
@@ -3574,8 +3622,8 @@
             "$ref": "#/components/schemas/PhoneNumber"
           },
           "abn": {
-            "minLength": 1,
-            "type": "string"
+            "type": "string",
+            "nullable": true
           },
           "faxNumber": {
             "$ref": "#/components/schemas/PhoneNumber"
@@ -4803,8 +4851,7 @@
           "dateFormatLastRevised",
           "dateTransmissionFileCreated",
           "documentOriginator",
-          "finalReceiver",
-          "transmissionType"
+          "finalReceiver"
         ],
         "type": "object",
         "properties": {
