# src/Wiedpug/Wiedpug.API/ExampleResponses/TestCertificatesExamples.cs
@@ -25,9 +25,7 @@ namespace Wiedpug.API.ExampleResponses
                     CurrentTransmitter = "AWTM",
                     CurrentReceiver = "AWXLC",
                     FinalReceiver = "AWXLC",
-                    AccessPassword = "1111111111",
-                    AccessPasswordReplacement = null,
-                    TransmissionType = TransmissionType.AuctionCatalogues,
+                    TransmissionType = TransmissionType.TestCertificate,
                     VersionNumber = 31,
                     SoftwareIdentifier = new SoftwareIdentifier
                     {
